--- a/queries.css
+++ b/queries.css
@@ -1,4 +1,5 @@
 @media screen and (max-width:57em){
+
   .box{
     flex-direction: column;
   }
@@ -46,8 +47,19 @@
   body{
     min-width: fit-content;
   }
-  .container{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
+  .third-section{
+    max-width: 100%;
+    height: 100%;
+    margin-bottom: 50rem;
+    margin-top: 10rem;
   }
+  .second-section .box{
+    background: #000021;
+    width: 100vw;
+    height: 2px;
+    margin: 3.6rem 0;
+    display: flex;
+    font-size: 2rem;
+  }
+  
 }
