--- a/queries.css
+++ b/queries.css
@@ -50,8 +50,8 @@
   .third-section{
     max-width: 100%;
     height: 100%;
-    margin-bottom: 50rem;
-    margin-top: 10rem;
+    margin: 13rem auto;
+
   }
   .second-section .box{
     background: #000021;
