--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ footer .footer-rights{
 }
 .third-section{
   max-width: 80vw;
-  margin: 13rem auto;
+  margin: 5rem auto;
   height: 80vh;
-
+  margin-bottom: 13rem;
 }
