--- a/style.css
+++ b/style.css
@@ -295,11 +295,14 @@ footer .footer-rights{
 .second-section h1{
   color: #214479;
 }
-.second-section .skill-box{
+.second-section .box {
   background: #000021;
   width: 75vw;
   height: 2px;
   margin: 3.6rem 0;
   font-size: 2rem;
+  display: grid;
+  grid-template-columns: repeat(1,1fr);
+  gap: 1.6rem;
 }
 
