--- a/queries.css
+++ b/queries.css
@@ -59,15 +59,14 @@
     display: flex;
     font-size: 2rem;
   }
-  .subscribe-form input{
+  .second-section .box{
+    background: #000021;
     width: 100%;
-
-    padding-left: 16.8rem;
-   outline: none;
-    border: none;
-    border-radius: 8rem;
-    font-size: 1.6rem;
+    height: 2px;
+    margin: 3.6rem 0;
+    display: flex;
+    flex-wrap: nowrap;
+    font-size: 2rem;
   }
-
   
 }
