--- a/style.css
+++ b/style.css
@@ -295,14 +295,21 @@ footer .footer-rights{
 .second-section h1{
   color: #214479;
 }
-.second-section .box {
+.second-section .box{
   background: #000021;
-  width: 75vw;
+  max-width: 100%;
   height: 2px;
   margin: 3.6rem 0;
-  font-size: 2rem;
-  display: grid;
-  grid-template-columns: repeat(1,1fr);
-  gap: 1.6rem;
+  display: flex;
+  flex-wrap: nowrap;
+  font-size: 1.6rem;
+  gap: 2rem;
+}
+.second-section p{
+  margin-top: 3rem;
 }
 
+.second-section strong{
+  font-size: 1.6rem;
+  border-bottom: 1px solid #214479;
+}
