--- a/queries.css
+++ b/queries.css
@@ -1,4 +1,8 @@
 @media screen and (max-width:57em){
+  body{
+    background: #000021;
+    color: #fafcff;
+  }
 
   .box{
     flex-direction: column;
@@ -15,9 +19,9 @@
   .nav{
     flex-direction: column;
   }
-  .frist-section{
+  /* .frist-section{
     flex-direction: column-reverse;
-  }
+  } */
   .left-section{
     width: 100% !important;
     display: flex;
@@ -59,14 +63,6 @@
     display: flex;
     font-size: 2rem;
   }
-  .second-section .box{
-    background: #000021;
-    width: 100%;
-    height: 2px;
-    margin: 3.6rem 0;
-    display: flex;
-    flex-wrap: nowrap;
-    font-size: 2rem;
-  }
+ 
   
 }
