--- a/queries.css
+++ b/queries.css
@@ -66,3 +66,13 @@
  
   
 }
+@media screen and (max-width:23em){
+  .second-section .box{
+    background: #000021;
+    width: 100vw;
+    display: grid;
+    grid-template-rows: repeat(2,1fr);
+    font-size: 1.4rem;
+  }
+ 
+}
