--- a/queries.css
+++ b/queries.css
@@ -1,4 +1,4 @@
-@media screen and (max-width:57em){
+/* @media screen and (max-width:57em){
   body{
     background: #000021;
     color: #fafcff;
@@ -75,4 +75,15 @@
     font-size: 1.4rem;
   }
  
+} */
+
+@media(max-width:1000px){
+.container {
+    grid-template-columns: repeat(1,1fr);
+}
+.second-section-img{
+
+  display: none;
+}
+
 }
