--- a/queries.css
+++ b/queries.css
@@ -1,88 +1,23 @@
-/* @media screen and (max-width:57em){
-  body{
-    background: #000021;
-    color: #fafcff;
-  }
-
-  .box{
-    flex-direction: column;
-  }
-  .second-section{
-    height: unset;
-  }
-  .vertical-title,.vertical-desc{
-    left: 45px;
-  }
-  .second-section .box{
-    width: 50vw;
-  }
-  .nav{
-    flex-direction: column;
-  }
-  .frist-section{
-    flex-direction: column-reverse;
-  }
-  .left-section{
-    width: 100% !important;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .right-section{
-    width: 721px !important;
-    display: flex;
-    justify-content: center;
-  }
-  .right-section img{
-    width: 45%;
-    margin-bottom: 73px;
-  }
-  .img-top{
-    top:133px
-  }
-
-  .second-section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 141vh;
-  }
-  body{
-    min-width: fit-content;
-  }
-  .third-section{
-    max-width: 100%;
-    height: 100%;
-    margin: 13rem auto;
-
-  }
-  .second-section .box{
-    background: #000021;
-    width: 100vw;
-    display: flex;
-    font-size: 2rem;
-  }
- 
-  
-}
-@media screen and (max-width:23em){
-  .second-section .box{
-    background: #000021;
-    width: 100vw;
-    display: grid;
-    grid-template-rows: repeat(2,1fr);
-    font-size: 1.4rem;
-  }
- 
-} */
-
 @media(max-width:1000px){
 .container {
     grid-template-columns: repeat(1,1fr);
 }
-.second-section-img{
-  display: none;
+.second-section{
+  flex-direction: column;
+}
+.layer{
+  font-size: 40px;
+}
+.third-section-container{
+  padding: 20px 60px;
+}
+.project-description p{
+  font-size: 11px;
+  line-height: 1.5;
+}
+.project-description h3{
+  font-size: 12px;
+
 }
 
 #element{
@@ -92,5 +27,9 @@
   font-size: 12px;
   margin-left: 20px;
 }
+.section-container {
+  padding: 20px 28px;
+  font-size: 10px;
 
+}
 }
