--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,10 +12,10 @@
   --text-color:#fff;
   --bg-color:#1b1f24;
   --second-bg-color:#22282f;
-  --main-color:#13bbff;
+  --main-color:#E41165;
   --other-color:#c3cad5;
   --h1-font:4.5rem;
-  --h2-font:2.9rem;
+  --h2-font:1.9rem;
   --p-font:1rem;
 }
 
@@ -111,7 +111,8 @@ section{
 .hero{
   height: 100vh;
   width: 100%;
-  background: url(/public/img/hero_2.webp);
+  /* background: url(/public/img/hero_2.webp); */
+  background: url(/public/img/hero-img98.jpg);
   background-position: top right;
   background-size: cover;
   display: flex;
@@ -206,8 +207,8 @@ section{
     max-width: 330px;
     border-radius: 50%;
     object-fit: cover;
-    border: 7px solid var(--main-color);
-    box-shadow: 0 0 20px var(--main-color);
+    border: 4px solid var(--main-color);
+    box-shadow: 0 0 10px var(--main-color);
     filter: brightness(60%);
 }
 
@@ -372,16 +373,26 @@ section{
 
 /* CONTACT SECTION */
 
+.contact{
+  background-color: #AE85EE;
+  padding: 30px 20% 42px;
+
+}
+
 .contact-form{
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 4.2rem;
+  margin-top: 2.2rem;
+  background-color: white;
+  border-radius: 10px;
+  padding:50px 0;
 }
 
-.contact-form form{
+/* .contact-form form{
   position: relative;
   width: 600px;
+  
 }
 
 form input,form textarea{
@@ -418,7 +429,7 @@ form .sendMsg-btn:hover{
     color: var(--main-color);
     box-shadow: 0 0 20px var(--main-color);
     cursor: pointer;
-}
+} */
 
 /* FOOTER SECTION */
 
