--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,33 +1,32 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   text-decoration: none;
   list-style: none;
   scroll-behavior: smooth;
 }
 
-:root{
-  --text-color:#fff;
-  --bg-color:#1b1f24;
-  --second-bg-color:#22282f;
-  --main-color:#E41165;
-  --other-color:#c3cad5;
-  --h1-font:3.5rem;
-  --h2-font:1.9rem;
-  --p-font:1rem;
+:root {
+  --text-color: #fff;
+  --bg-color: #1b1f24;
+  --second-bg-color: #22282f;
+  --main-color: #e41165;
+  --other-color: #c3cad5;
+  --h1-font: 3.5rem;
+  --h2-font: 1.9rem;
+  --p-font: 1rem;
 }
 
-body{
+body {
   color: var(--text-color);
   background-color: var(--bg-color);
 }
 
-
 /* Navigation Section */
 
-.header{
+.header {
   position: fixed;
   width: 100%;
   top: 0;
@@ -38,44 +37,44 @@ body{
   justify-content: space-between;
   padding: 40px 10%;
   background: transparent;
-  transition: all 0.50s ease;
+  transition: all 0.5s ease;
 }
 
-.logo{
+.logo {
   font-size: 36px;
   color: var(--text-color);
   font-weight: 600;
 }
 
-span{
+span {
   color: var(--main-color);
 }
 
-.nav-list{
+.nav-list {
   display: flex;
 }
 
-.nav-list a{
+.nav-list a {
   font-size: var(--p-font);
   font-weight: 500;
   color: var(--other-color);
   margin-left: 40px;
-  transition: all 0.50s ease;
+  transition: all 0.5s ease;
 }
 
-.nav-list a:hover{
+.nav-list a:hover {
   color: var(--main-color);
-  text-shadow: 3px 3px 20px var(--main-color),-2px 1px 30px var(--text-color);
+  text-shadow: 3px 3px 20px var(--main-color), -2px 1px 30px var(--text-color);
 }
 
-#menu-icon{
+#menu-icon {
   font-size: 35px;
   z-index: 1000;
   cursor: pointer;
   display: none;
 }
 
-.header-btn{
+.header-btn {
   display: inline-block;
   padding: 11px 26px;
   background: transparent;
@@ -84,35 +83,33 @@ span{
   border-radius: 8px;
   font-size: 15px;
   font-weight: 600;
-  transition: all 0.50s ease;
- 
+  transition: all 0.5s ease;
 }
 
-.header-btn:hover{
+.header-btn:hover {
   background-color: var(--main-color);
   color: var(--bg-color);
   box-shadow: 0 0 20px var(--main-color);
   transform: scale(1.1);
 }
 
-.header.sticky{
+.header.sticky {
   background: var(--bg-color);
-  box-shadow: 0 .1rem 1rem rgb(0,0,0,0.2);
+  box-shadow: 0 0.1rem 1rem rgb(0, 0, 0, 0.2);
   padding: 10px 10%;
 }
 
-
 /* HERO SECTION */
 
-section{
+section {
   padding: 110px 16% 90px;
 }
 
-.hero{
+.hero {
   height: 100vh;
   width: 100%;
   /* background: url(/public/img/hero_2.webp); */
-  background: url(/public/img/hero-img98.jpg);
+  background: url(/public/img/hero-bg.jpeg);
   background-position: top right;
   background-size: cover;
   display: flex;
@@ -120,18 +117,18 @@ section{
   align-items: center;
 }
 
-.main-content h4{
+.main-content h4 {
   font-size: 1.6rem;
 }
 
-.main-content h1{
+.main-content h1 {
   font-size: var(--h1-font);
   font-weight: 900;
   margin: 20px 0 20px;
   line-height: 1.2;
 }
 
-.main-content p{
+.main-content p {
   font-size: var(--p-font);
   font-weight: 400;
   width: 620px;
@@ -141,11 +138,11 @@ section{
   margin-bottom: 15px;
 }
 
-.social-link{
+.social-link {
   margin-bottom: 40px;
 }
 
-.social-link i{
+.social-link i {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -156,15 +153,15 @@ section{
   backdrop-filter: brightness(88%); /*background-some transaorent color*/
   font-size: 20px;
   margin-right: 17px;
-  transition: all 0.50s ease;
+  transition: all 0.5s ease;
 }
 
-.social-link i:hover{
+.social-link i:hover {
   transform: scale(1.1);
   box-shadow: 0 0 20px var(--main-color);
 }
 
-.btn{
+.btn {
   display: inline-block;
   padding: 11px 26px;
   background-color: var(--main-color);
@@ -173,113 +170,113 @@ section{
   border-radius: 8px;
   font-size: 15px;
   font-weight: 600;
-  transition: all 0.50s ease;
+  transition: all 0.5s ease;
   cursor: pointer;
 }
 
-.btn:hover{
+.btn:hover {
   background: transparent;
   color: var(--main-color);
   box-shadow: 0 0 20px var(--main-color);
 }
 
-.btn2{
+.btn2 {
   background: transparent;
   color: var(--main-color);
   margin-left: 15px;
 }
-.btn2:hover{
+.btn2:hover {
   background-color: var(--main-color);
   color: var(--bg-color);
 }
 
 /* ABOUT SECTION */
-.about{
+.about {
   background-color: var(--second-bg-color);
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   align-items: center;
   gap: 1rem;
 }
-.about-img img{
-    width: 100%;
-    height: 330px;
-    max-width: 330px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 4px solid var(--main-color);
-    box-shadow: 0 0 10px var(--main-color);
-    filter: brightness(60%);
+.about-img img {
+  width: 100%;
+  height: 330px;
+  max-width: 330px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid var(--main-color);
+  box-shadow: 0 0 10px var(--main-color);
+  filter: brightness(60%);
 }
 
-.about-content h2{
+.about-content h2 {
   font-size: var(--h2-font);
   line-height: 1.3;
   margin-bottom: 20px;
   /* font-size: 30px; */
 }
 
-.expriance-area{
+.expriance-area {
   margin-bottom: 50px;
 }
 
-.expriance-area p{
+.expriance-area p {
   font-weight: 600;
   font-size: 19px;
   line-height: 42px;
 }
 
-.expriance-area p span{
-    color: var(--other-color);
-    font-size: var(--p-font);
-    font-weight: 400;
-    margin-left: 8px;
+.expriance-area p span {
+  color: var(--other-color);
+  font-size: var(--p-font);
+  font-weight: 400;
+  margin-left: 8px;
 }
 
 /* SERVICES SECTION */
-.center-txt{
+.center-txt {
   text-align: center;
 }
 
-.center-txt h2{
-  font-size: var(--h2-font)
+.center-txt h2 {
+  font-size: var(--h2-font);
 }
 
-.services-content{
+.services-content {
   display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(280px,auto));
+  grid-template-columns: repeat(auto-fit, minmax(280px, auto));
   gap: 2.3rem;
   margin-top: 4.2rem;
 }
 
-.box{
+.box {
   padding: 80px 40px 66px;
   background: #2d343f;
   border-radius: 28px;
   border: 1px solid transparent;
   box-shadow: 0 0 5px var(--main-color);
-  transition: all 0.50s ease;
+  transition: all 0.5s ease;
   cursor: pointer;
 }
 
-.box img{
+.box img {
   margin-bottom: 20px;
 }
-.box h3{
+.box h3 {
   font-size: 20px;
   font-weight: 700;
   margin-bottom: 10px;
 }
 
-.box p{
+.box p {
   font-size: var(--p-font);
   font-weight: 400;
   color: var(--other-color);
   line-height: 30px;
-  margin-bottom: 20px; 
+  margin-bottom: 20px;
 }
 
-.box a{
+.box a {
   display: inline-block;
   font-size: 22px;
   line-height: 1.273rem;
@@ -289,64 +286,64 @@ section{
   border-bottom: 2px solid #5d6c83;
 }
 
-.box i{
+.box i {
   vertical-align: middle;
   font-size: 25px;
   color: var(--main-color);
   margin-left: 5px;
 }
 
-.box a:hover{
+.box a:hover {
   border-bottom: 2px solid var(--main-color);
 }
-.box:hover{
+.box:hover {
   border: 1px solid var(--main-color);
-   transform: translateY(-5px) scale(1.03);
+  transform: translateY(-5px) scale(1.03);
 }
 
 /* PORTFOILIO SECTION */
 
-.portfolio{
+.portfolio {
   background: var(--second-bg-color);
 }
 
-.portfolio-content{
+.portfolio-content {
   display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(300px,auto));
+  grid-template-columns: repeat(auto-fit, minmax(300px, auto));
   gap: 2.3rem;
   margin-top: 4.2rem;
 }
 
-.row img{
+.row img {
   height: auto;
   width: 100%;
   border-radius: 28px;
   margin-bottom: 1.4rem;
 }
 
-.row{
+.row {
   background: #2d343f;
   border-radius: 28px;
   border: 1px solid transparent;
   box-shadow: 0 0 5px var(--main-color);
   padding: 20px;
-  transition: all 0.50s ease;
+  transition: all 0.5s ease;
 }
 
-.main-row{
+.main-row {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 0.5rem;
 }
 
-.row h5{
+.row h5 {
   font-size: 20px;
   font-weight: 600;
   color: var(--other-color);
 }
 
-.row i{
+.row i {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -359,13 +356,13 @@ section{
   background: #075fe4;
 }
 
-.row h4{
+.row h4 {
   font-size: 25px;
   font-weight: 700;
   margin-bottom: 10px;
   line-height: 1.4;
 }
-.row:hover{
+.row:hover {
   border: 1px solid var(--main-color);
   transform: translateY(-5px) scale(1.03);
   cursor: pointer;
@@ -373,20 +370,19 @@ section{
 
 /* CONTACT SECTION */
 
-.contact{
-  background-color: #AE85EE;
+.contact {
+  background-color: #ae85ee;
   padding: 30px 20% 42px;
-
 }
 
-.contact-form{
+.contact-form {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 2.2rem;
   background-color: white;
   border-radius: 10px;
-  padding:50px 0;
+  padding: 50px 0;
 }
 
 /* .contact-form form{
@@ -433,7 +429,7 @@ form .sendMsg-btn:hover{
 
 /* FOOTER SECTION */
 
-.footer{
+.footer {
   padding: 22px 16%;
   background: var(--second-bg-color);
   display: flex;
@@ -442,13 +438,13 @@ form .sendMsg-btn:hover{
   gap: 2rem;
 }
 
-.copyright p{
+.copyright p {
   font-size: 15px;
   font-weight: 400;
   color: var(--other-color);
 }
 
-.scroll-top i{
+.scroll-top i {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -460,66 +456,64 @@ form .sendMsg-btn:hover{
   color: var(--text-color);
 }
 
-@media(max-width:1700px){
-  .header{
+@media (max-width: 1700px) {
+  .header {
     padding: 20px 8%;
   }
-  .header .sticky{
+  .header .sticky {
     padding: 14px 8%;
   }
-  section{
+  section {
     padding: 90px 8% 80px;
   }
-  .footer{
+  .footer {
     padding: 18px 8%;
   }
-  .logo{
+  .logo {
     font-size: 28px;
   }
 }
 
-
-@media(max-width:1380px){
-  .header{
+@media (max-width: 1380px) {
+  .header {
     padding: 20px 5%;
   }
-  .header .sticky{
+  .header .sticky {
     padding: 14px 5%;
   }
-  section{
+  section {
     padding: 90px 5% 80px;
   }
-  .footer{
+  .footer {
     padding: 18px 5%;
   }
-  .hero{
+  .hero {
     height: 90vh;
     background-position: center;
   }
- 
 }
 
-@media(max-width:1290px){
-  .box{
+@media (max-width: 1290px) {
+  .box {
     padding: 40px 40px 46px;
   }
-  .box img{
+  .box img {
     width: 100%;
     height: 60px;
     max-width: 60px;
   }
-  .box h3{
+  .box h3 {
     font-size: 21px;
   }
 }
 
-@media(max-width:1240px){
-  .about{
+@media (max-width: 1240px) {
+  .about {
     grid-template-columns: 1fr;
     gap: 2rem;
     text-align: center;
   }
-  .about-img img{
+  .about-img img {
     text-align: center;
     width: 100%;
     height: 400px;
@@ -528,25 +522,26 @@ form .sendMsg-btn:hover{
     object-fit: cover;
     margin: 0 auto;
   }
-  :root{
-    --h1-font:4rem;
-    --h2-font:2.2rem;
-    --p-font:15px;
+  :root {
+    --h1-font: 4rem;
+    --h2-font: 2.2rem;
+    --p-font: 15px;
   }
 }
 
-@media(max-width:950px){
-  :root{
-    --h1-font:3.5rem;
+@media (max-width: 950px) {
+  :root {
+    --h1-font: 3.5rem;
   }
-  .social-link{
+  .social-link {
     margin-bottom: 20px;
   }
-  #menu-icon{
+  #menu-icon {
     display: block;
   }
 
-  .nav-list,.top-btn{
+  .nav-list,
+  .top-btn {
     position: absolute;
     top: 100%;
     right: -100%;
@@ -555,36 +550,33 @@ form .sendMsg-btn:hover{
     display: flex;
     flex-direction: column;
     background-color: var(--bg-color);
-    transition: all 0.50s ease;
+    transition: all 0.5s ease;
   }
 
-
-
-  .nav-list a{
+  .nav-list a {
     display: block;
     padding: 17px;
-    font-size: 22px ;
+    font-size: 22px;
   }
 
-  .nav-list.active{
+  .nav-list.active {
     right: 0;
   }
-
 }
 
-@media(max-width:680px){
-  .main-content p{
+@media (max-width: 680px) {
+  .main-content p {
     width: 100%;
   }
 }
 
-@media(max-width:680px){
-  :root{
-    --h1-font:2.8rem;
-    --h2-font:2rem;
+@media (max-width: 680px) {
+  :root {
+    --h1-font: 2.8rem;
+    --h2-font: 2rem;
   }
 
-  .about-img img{
+  .about-img img {
     text-align: center;
     width: 100%;
     height: 300px;
@@ -593,5 +585,37 @@ form .sendMsg-btn:hover{
     object-fit: cover;
     margin: 0 auto;
   }
+}
 
+/* Request call back */
+.container {
+  max-width: 600px;
+  margin: 20px auto;
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+input[type="text"],
+input[type="tel"] {
+  width: 100%;
+  padding: 10px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+#errorMsg {
+  color: red;
+  margin-top: 5px;
+}
+#submitBtn {
+  width: 100%;
+  padding: 10px;
+  margin-top: 10px;
+  border: none;
+  background-color: #007bff;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
 }
